@@ -1,3 +1,9 @@
+2007-06-20  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (gnome_theme_icon_info_find,
+	gnome_theme_is_writable):
+	* gnome-theme-info.h: fix function signatures
+
 2007-06-18  Jens Granseuer  <jensgr@gmx.net>
 
 	* Makefile.am: remove obsolete files
